--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -62,7 +62,7 @@
     "PaisT": "Pais",
     "Pais": "Ingrese su ciudad y/o país de donde nos contactas",
 
-    "Get": "¡Obtenga una demostracion!",
+    "Get": "¡Obtenga una demo",
 
     "headerone":"+Funciones",
     "headertwo":"Beneficios",
