--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -3,7 +3,7 @@
     "hola": "Hola",
     "title": "Reinventamos las apuestas deportivas",
     "subtitle": "Canal Interactivo con IA para Operadores iGaming",
-    "text": "Nuestro canal interactivo, impulsado por inteligencia artificial, proporciona una comunicación bidireccional eficiente entre usuarios y operadores iGaming.",
+    "text": "Nuestro canal interactivo, impulsado por inteligencia artificial, proporciona comunicación bidireccional eficiente entre usuarios y operadores iGaming.",
     "secondtext": " Esta solución permite a sus jugadores realizar apuestas deportivas de manera rápida y sencilla, a través de su canal de mensajería preferido, omitiendo la necesidad de acceder a la interfaz de usuario de su sportsbook.",
     "thankstoia": "Gracias a la IA",
     "thankstoiatwo": "simula una conversación entre seres humanos y le habla a sus jugadores de forma natural, proporcionando una comunicación inteligente, tal como lo hacen las personas, lo que brinda una experiencia única, directa y sin fricciones.",
@@ -27,7 +27,7 @@
 
     "CómoFunciona": "¿Cómo Funciona ChatBet?",
     "integramos": "Nos integramos con su proveedor de PAM o agregador para activar",
-    "sitio": "en su sitio de web de apuestas. Desde ahí, podrá personalizar a su gusto, la información que quiere compartir; disponibilizar sus ofertas de apuestas deportivas, conectar sus usuarios y transformar la forma de realizar apuestas deportivas.",
+    "sitio": "en su sitio de web de apuestas. Desde ahí, podrá personalizar a su gusto, la información que quiere compartir, disponibilizar sus ofertas de apuestas deportivas, conectar sus usuarios y transformar la forma de realizar apuestas deportivas.",
 
     "Hablacon" : "Habla con la IA de forma natural y recibe respuesta.",
     "Buscacon" : "Busca con facilidad deportes y equipos.",
@@ -62,7 +62,7 @@
     "PaisT": "Pais",
     "Pais": "Ingrese su ciudad y/o país de donde nos contactas",
 
-    "Get": "¡Obtenga una demo",
+    "Get": "¡Obtenga una demo!",
 
     "headerone":"+Funciones",
     "headertwo":"Beneficios",
