--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -38,9 +38,9 @@
     "Personalice" : "Customize",
     "yhaga" : " to match your brand's personality | Add a widget with a simple code.",
 
-    "Listopara" : "Ready for Action?",
-    "Únase" : "Join the excitement!",
-    "Agendemos" : "Let's schedule a demonstration and discover how ChatBet's AI transforms the user experience.",
+    "Listopara" :"Ready for Action?",
+    "Únase" :"Experience the thrill!",
+    "Agendemos" : "Schedule a demonstration today and see how how ChatBet's AI revolutionizes the user experiencie",
 
     "Doyou": "Do you have any message or question to resolve? (Optional)",
     "Sumbit" : "Submit form",
