--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,11 +1,11 @@
 {
     "hola" : "Hello",
-    "title" : "We reinvent sports betting",
+    "title" : "Reinventing Sports Betting",
     "subtitle" : "Interactive AI Channel for iGaming Operators",
-    "text": "Our interactive channel, powered by artificial intelligence, provides efficient two-way communication between users and iGaming operators.",
+    "text": "Our AI-powered channel enables seamless two-way communication, allowing players to place sports bets easily through their preferred messaging app without needing the sportsbook interface.",
     "secondtext": "This solution allows your players to place sports bets quickly and easily through their preferred messaging channel, eliminating the need to access the sportsbook user interface.",
     "thankstoia": "Thanks to AI",
-    "thankstoiatwo": "simulates a conversation between humans and speaks to your players naturally, providing intelligent communication just like people do, offering a unique, direct, and frictionless experience",
+    "thankstoiatwo": "uses AI to simulate natural, human-like conversations, offering a unique, direct, and frictionless betting experience.",
 
     "Features":"+ Features",
     "Potencie":"Enhance Your Operation with ChatBet",
