--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -3,37 +3,38 @@
     "hola": "Hola",
     "title": "Reinventamos las apuestas deportivas",
     "subtitle": "Canal Interactivo con IA para Operadores iGaming",
-    "text": "Nuestro canal interactivo, impulsado por inteligencia artificial, proporciona comunicación bidireccional eficiente entre usuarios y operadores iGaming.",
+    "text": "Con IA de última generación, tus jugadores pueden apostar de manera sencilla y directa a través de su app de mensajería favorita. ChatBet responde al instante y de forma natural, ofreciendo una experiencia de apuestas fluida, rápida y sin complicaciones.",
     "secondtext": " Esta solución permite a sus jugadores realizar apuestas deportivas de manera rápida y sencilla, a través de su canal de mensajería preferido, omitiendo la necesidad de acceder a la interfaz de usuario de su sportsbook.",
     "thankstoia": "Gracias a la IA",
     "thankstoiatwo": "simula una conversación entre seres humanos y le habla a sus jugadores de forma natural, proporcionando una comunicación inteligente, tal como lo hacen las personas, lo que brinda una experiencia única, directa y sin fricciones.",
     
-    "Features":"+ Funciones",
+    "Features":"Potencie su Operación con ChatBet",
     "Potencie":"Potencie su Operación con ChatBet ",
     "Generación":"Generación de Noticias:",
-    "Mantenga":"Mantenga sus usuarios informados con las últimas noticias, eventos del momento, actualizaciones relevantes, recomendaciones y sugerencias que permitan apuestas inteligentes.",
+    "Mantenga":"Permite que tus jugadores apuesten desde cualquier lugar—ya sea a través de WhatsApp, Telegram, tu app o en la web. ChatBet se integra fácilmente en todos los canales para ofrecer una experiencia de apuestas sin interrupciones.",
     "Pronósticos":"Pronósticos, Tips y Estadísticas:",
     "Proporcione":"Proporcione pronósticos detallados, consejos expertos y estadísticas actualizadas para mejorar la experiencia de apuestas de sus usuarios.",
     "Bonos":"Bonos y Promociones:",
     "Incentive":"Incentive la participación y fidelidad de sus jugadores con ofertas atractivas.",
 
-    "Beneficios":" Beneficios",
-    "Reducción":"Reducción de la Fricción: ",
-    "Minimiza":" Minimiza barreras de entrada al eliminar la necesidad de apostar en interfaces complicadas.",
-    "Machine":" Machine Learning:",
-    "Utiliza":"Utiliza algoritmos IA para el procesamiento del lenguaje natural (NLP) y el aprendizaje automático, los cuales mejoran continuamente su capacidad de comprensión y respuesta a la intención detrás de las solicitudes de los usuarios. ",
-    "IA":"IA Entrenada al iGaming: ",
-    "Responde":"Responde de forma intuitiva  y simple, en el idioma configurado, a términos usados frecuentemente en apuestas deportivas y reconoce modismos locales, cyberlenguaje y otros idiomas. ",
+    "Beneficios":" Recomendaciones-IA para Apuestas Personalizadas de ChatBet",
+    "Reducción":"Apuestas Personalizadas:",
+    "Minimiza":" ChatBet ajusta las apuestas según preferencias del usuario, aumentando el engagement.",
+    "Machine":" Optimización en Tiempo Real:",
+    "Utiliza":"La IA mejora las recomendaciones al instante, impulsando apuestas más grandes y frecuentes.",
+    "IA":"Aprendizaje Continuo:",
+    "Responde":"Ajustes dinámicos para ofrecer las mejores opciones y aumentar la retención.",
 
     "CómoFunciona": "¿Cómo Funciona ChatBet?",
     "integramos": "Nos integramos con su proveedor de PAM o agregador para activar",
     "sitio": "en su sitio de web de apuestas. Desde ahí, podrá personalizar a su gusto, la información que quiere compartir, disponibilizar sus ofertas de apuestas deportivas, conectar sus usuarios y transformar la forma de realizar apuestas deportivas.",
 
-    "Hablacon" : "Habla con la IA de forma natural y recibe respuesta.",
-    "Buscacon" : "Busca con facilidad deportes y equipos.",
+    "Hablacon" : "Apuesta en segundos con respuestas rápidas y sin esperas.",
+    "Buscacon" : "Tus transacciones y datos siempre protegido ",
     "Conuna" : "Con una Interfaz sencilla, encuentra partidos en tu Canal preferido.",
-    "Seleccionacuánto" : "Selecciona cuánto apostar.",
-    "LaIA" : "La IA ofrece opciones y ganancias, la jugada final la decide el usuario.",
+    "title1" : "Apuestas Instantáneas",
+    "title2" : "Seguridad Garantizada",
+    "title3" : "Multiplataforma",
 
     "Sencilla" : "Sencilla Integración",
     "Personalice" : "Personalice",
