--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -17,7 +17,7 @@
     "Bonos":"Bonos y Promociones:",
     "Incentive":"Incentive la participación y fidelidad de sus jugadores con ofertas atractivas.",
 
-    "Beneficios":" Recomendaciones-IA para Apuestas Personalizadas de ChatBet",
+    "Beneficios":" Recomendaciones IA para Apuestas Personalizadas de ChatBet",
     "Reducción":"Apuestas Personalizadas:",
     "Minimiza":" ChatBet ajusta las apuestas según preferencias del usuario, aumentando el engagement.",
     "Machine":" Optimización en Tiempo Real:",
