--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,111 +1,145 @@
 {
-    "hola" : "Hello",
-    "title" : "Reinventing Sports Betting",
-    "subtitle" : "Interactive AI Channel for iGaming Operators",
-    "text": "Our AI-powered channel enables seamless two-way communication, allowing players to place sports bets easily through their preferred messaging app without needing the sportsbook interface.",
-    "secondtext": "This solution allows your players to place sports bets quickly and easily through their preferred messaging channel, eliminating the need to access the sportsbook user interface.",
-    "thankstoia": "Thanks to AI",
-    "thankstoiatwo": "uses AI to simulate natural, human-like conversations, offering a unique, direct, and frictionless betting experience.",
+    
+        "hola": "Hello",
+        "title": "We Reinvent Sports Betting",
+        "subtitle": "Interactive Channel with AI for iGaming Operators",
+        "text": "With state-of-the-art AI, your players can bet easily and directly through their favorite messaging app. ChatBet responds instantly and naturally, offering a smooth, fast, and hassle-free betting experience.",
+        "secondtext": "This solution allows your players to place sports bets quickly and easily through their preferred messaging channel, eliminating the need to access the user interface of your sportsbook.",
+        "thankstoia": "Thanks to AI",
+        "thankstoiatwo": "it simulates a conversation between humans and speaks to your players naturally, providing intelligent communication just like people do, offering a unique, direct, and frictionless experience.",
+        
+        "Features": "Enhance Your Operation with ChatBet",
+        "Potencie": "Enhance Your Operation with ChatBet",
+        "Generación": "News Generation:",
+        "Mantenga": "Allow your players to bet from anywhere—whether through WhatsApp, Telegram, your app, or on the web. ChatBet easily integrates across all channels to offer an uninterrupted betting experience.",
+        "Pronósticos": "Forecasts, Tips, and Statistics:",
+        "Proporcione": "Provide detailed forecasts, expert advice, and updated statistics to enhance your users' betting experience.",
+        "Bonos": "Bonuses and Promotions:",
+        "Incentive": "Encourage participation and loyalty of your players with attractive offers.",
+    
+        "Beneficios": "AI Recommendations for Personalized Bets from ChatBet",
+        "Reducción": "Personalized Bets:",
+        "Minimiza": "ChatBet adjusts bets according to user preferences, increasing engagement.",
+        "Machine": "Real-Time Optimization:",
+        "Utiliza": "AI improves recommendations instantly, driving larger and more frequent bets.",
+        "IA": "Continuous Learning:",
+        "Responde": "Dynamic adjustments to offer the best options and increase retention.",
+    
+        "CómoFunciona": "How Does ChatBet Work?",
+        "integramos": "We integrate with your PAM provider or aggregator to activate",
+        "sitio": "on your betting website. From there, you can customize to your liking, the information you want to share, make your sports betting offers available, connect your users, and transform the way sports betting is done.",
+    
+        "Hablacon": "Bet in seconds with quick responses and no waiting.",
+        "Buscacon": "Your transactions and data always protected",
+        "Conuna": "With a simple interface, find matches in your preferred channel.",
+        "title1": "Instant Bets",
+        "title2": "Guaranteed Security",
+        "title3": "Multiplatform",
+    
+        "Sencilla": "Simple Integration",
+        "Personalice": "Customize",
+        "yhaga": "and match it with your brand's personality | Add a widget with a simple code.",
+    
+        "Listopara": "Ready for Action?",
+        "Únase": "Join the excitement!",
+        "Agendemos": "Let's schedule a demo and discover how ChatBet's AI transforms the user experience.",
+    
+        "Doyou": "Any message or question to resolve? (Optional)",
+        "Sumbit": "Submit form",
+        "Feel": "Check here any questions you have.",
+    
+        "NombreT": "Name",
+        "Nombre": "Enter your name",
+        "NúmeroT": "Contact Number",
+        "Número": "Contact Number",
+        "CorreoT": "Corporate Email",
+        "Correo": "Enter your email",
+        "EmpresaT": "Company",
+        "Empresa": "Enter your company's name",
+        "CargoT": "Position",
+        "Cargo": "Enter your position name (Optional)",
+        "PaisT": "Country",
+        "Pais": "Enter your city and/or country from where you are contacting us",
+    
+        "Get": "Get a demo!",
+    
+        "headerone": "+Features",
+        "headertwo": "Benefits",
+        "headertree": "How Does It Work?",
+        "headerfour": "Integration",
+        "headerfive": "Contact Us",
+    
+        "slideone": "Withdrawals and Deposits:",
+        "slidetwo": "Allow managing withdrawals and deposits securely and conveniently, optimizing your users' financial transactions.",
+        "slidethree": "Bets in Other Verticals:",
+        "slidefour": "Present the option to play in other verticals of your operation and encourage cross-selling.",
+        "slidefive": "Affiliate Engine:",
+        "slidesix": "Affiliate players by making available",
+        "slideseven": "in groups and communities, while providing an attractive and differentiating experience, without paying affiliate commissions.",
+    
+        "slidetwoone": "Speed:",
+        "slidetwotwo": "Generates accurate responses in 1 second, so your users can bet without waiting.",
+        "slidetwothre": "Privacy and Security:",
+        "slidetwofour": "Your data and your users' data will always be hosted on your servers, ensuring security in transactions.",
+        "slidetwofive": "Hours:",
+        "slidetwosix": "Make available",
+        "slidetwoseven": "24 hours a day, 7 days a week, and provide an always accessible experience.",
+    
+        "sliderthreeone": "Multiplatform:",
+        "sliderthreetwo": "Add",
+        "sliderthreethree": "to your website, mobile app, or any other platform with a simple embed code or with our API.",
+        "sliderthreefour": "And Much More:",
+        "sliderthreefive": "Discover in a demo, the full range of functionalities of",
+        "sliderthreesix": "designed to maximize user satisfaction and retention.",
+        "sliderthreeseven": "Betting has never been so exciting and smart at the same time!",
+    
+        "slidefourone": "Immediate Bets:",
+        "slidefourtwo": "In an easy-to-use interface, that responds personally and contextually, AI processes and executes betting requests intelligently and instantly.",
+        "slidefourthree": "Activation in Multiple Channels:",
+        "slidefourfour": "Connect most messaging channels like your website, mobile apps, Apple Business Chat, Line, Facebook Messenger, WhatsApp, Telegram, Slack, Zapier, and more, and offer flexibility and convenience to your users, allowing them to choose their preferred channel to bet.",
+    
+        "slidefiveone": "Simplified Experience:",
+        "slidefivetwo": "The entire process is designed to be intuitive, allowing users to focus on their bets, which increases their satisfaction and loyalty.",
+        "slidefivethree": "Multilanguage:",
+        "slidefivefour": "Set your preferred language. This ensures that operators from various parts of the world can enjoy our services in their native language.",
+        "slidefivefive": "Backoffice:",
+        "slidefivesix": "Manage the user interface, messaging channels, and available functions; parameterize messages, links to redirect, minimum and maximum bet amounts; among others.",
+    
+        "slidefiveoneone": "Reports:",
+        "slidefivetwotwo": "Receive transaction reports, bets made with their respective ID, amounts bet, events they played on, statistics, performance indicators, and analyze metrics, etc.",
+        "slidefivethreeone": "ChatBet's AI is continuously trained with its performance.",
+    
 
-    "Features":"+ Features",
-    "Potencie":"Enhance Your Operation with ChatBet",
-    "Generación":"News Generation:",
-    "Mantenga":"Keep your users informed with the latest news, current events, relevant updates, recommendations, and suggestions that enable smart betting.",
-    "Pronósticos":"Forecasts, Tips, and Statistics:",
-    "Proporcione":"Provide detailed forecasts, expert tips, and up-to-date statistics to enhance your users' betting experience.",
-    "Bonos":"Bonuses and Promotions:",
-    "Incentive":"Encourage participation and loyalty from your players with attractive offers.",
-
-    "Beneficios":"Benefits",
-    "Reducción":"Friction Reduction:",
-    "Minimiza":"Minimize entry barriers by eliminating the need to bet on complicated interfaces.",
-    "Machine":"Machine Learning:",
-    "Utiliza":"Utilizes AI algorithms for natural language processing (NLP) and machine learning, which continuously improve its ability to understand and respond to the intent behind user requests.",
-    "IA":"iGaming-Trained AI:",
-    "Responde":"Responds intuitively and simply, in the configured language, to terms frequently used in sports betting and recognizes local idioms, cyber language, and other languages. ",
-
-    "CómoFunciona": "How does ChatBet work?",
-    "integramos": "We integrate with your PAM provider or aggregator to activate",
-    "sitio": "on your betting website. From there, you can customize the information you want to share, make your sports betting offers available, connect your users, and transform the way sports betting is done.",
-
-    "Hablacon" : "Talk to the AI naturally and receive a response.",
-    "Buscacon" : "Easily search for sports and teams.",
-    "Conuna" : "With a simple interface, find matches on your preferred channel.",
-    "Seleccionacuánto" : "Select how much to bet.",
-    "LaIA" : "The AI suggests options, but the user makes the final decision.",
-
-    "Sencilla" : "Simple Integration",
-    "Personalice" : "Customize",
-    "yhaga" : " to match your brand's personality | Add a widget with a simple code.",
-
-    "Listopara" :"Ready for Action?",
-    "Únase" :"Experience the thrill!",
-    "Agendemos" : "Schedule a demonstration today and see how how ChatBet's AI revolutionizes the user experiencie",
-
-    "Doyou": "Do you have any message or question to resolve? (Optional)",
-    "Sumbit" : "Submit form",
-    "Feel": "Feel free to ask any questions you may have here",
-
-    "NombreT": "First name and last name",
-    "Nombre": "Enter your name",
-    "NúmeroT": "Contact number",
-    "Número": "Enter your contact number",
-    "CorreoT": "Corporate email",
-    "Correo": "Enter your email",
-    "EmpresaT": "Company",
-    "Empresa": "Enter the name of your company",
-    "CargoT": "Position",
-    "Cargo": "Enter the name of your position (Optional)",
-    "PaisT": "Country",
-    "Pais": "Enter the country and/or city from where you are contacting us",
-    "Get": "Get a demonstration!",
-
-    "headerone":"+ Features",
-    "headertwo":"Benefits",
-    "headertree":"How does it work?",
-    "headerfour":"Integration",
-    "headerfive":"Contact Us",
-
-    "slideone": "Withdrawals and Deposits:",
-    "slidetwo": "Allows managing withdrawals and deposits in a secure and convenient manner, optimizing financial transactions for your users.",
-    "slidethree": "Betting on Other Verticals:",
-    "slidefour": "Present the option to play in other verticals of your operation and encourage cross-selling.",
-    "slidefive": "Affiliate Engine:",
-    "slidesix": "Affiliate players by making it available",
-    "slideseven": "in groups and communities, while providing an attractive and differentiating experience, without paying commissions for affiliation.",
-
-    "slidetwoone": "Speed:",
-    "slidetwotwo": "Generates accurate responses in 1 second, so your users can bet without having to wait.",
-    "slidetwothree": "Privacy and Security:",
-    "slidetwofour": "Your data and your users' data will always be hosted on your servers, guaranteeing security in transactions.",
-    "slidetwofive": "Hours:",
-    "slidetwosix": "Make it available",
-    "slidetwoseven": "24 hours a day, 7 days a week, and provide an always accessible experience.",
-
-    "sliderthreeone": "Multiplatform:",
-    "sliderthreetwo": "Add",
-    "sliderthreethree": "to your website, mobile app, or any other platform with a simple embed code or with our API.",
-    "sliderthreefour": "And Much More:",
-    "sliderthreefive": "Discover in a demo the full range of functionalities of",
-    "sliderthreesix": "designed to maximize user satisfaction and retention.",
-    "sliderthreeseven": "Betting has never been so exciting and smart at the same time!",
-
-    "slidefourone": "Instant Betting:",
-    "slidefourtwo": "In an easy-to-use interface that responds in a personal and contextual manner, the AI processes and executes betting requests intelligently and instantly.",
-    "slidefourthree": "Activation on Multiple Channels:",
-    "slidefourfour": "Connect most messaging channels such as your website, mobile apps, Apple Business Chat, Line, Facebook Messenger, WhatsApp, Telegram, Slack, Zapier, and more, and offer your users flexibility and convenience by allowing them to choose their preferred channel to bet.",
-
-    "slidefiveone": "Simplified Experience:",
-    "slidefivetwo": "The entire process is designed to be intuitive, allowing users to focus on their bets, which increases their satisfaction and loyalty.",
-    "slidefivethree": "Multilanguage:",
-    "slidefivefour": "Set your preferred language. This ensures that operators from different parts of the world can enjoy our services in their native language.",
-    "slidefivefive": "Backoffice:",
-    "slidefivesix": "Manage the user interface, messaging channels, and available features; parameterize messages, links to redirect, minimum and maximum bet amounts, among others.",
-
-    "slidefiveoneone": "Reports:",
-    "slidefivetwotwo": "Receive transaction reports, bets placed with their respective ID, amounts bet, events they played in, statistics, performance indicators, and analyze metrics, etc.",
-    "slidefivethreeone": "ChatBet's AI is continuously trained with its performance."
-
-
+    
+        "mascientocincuenta": "More than 150,000 players",
+        "activos": "active and playing:",
+        "porquedeberias": "Why should you integrate Chat Bet?",
+        "conchatbet": "With ChatBet, retaining players has never been easier. Our AI personalizes each bet, creating unique experiences that keep users engaged and boost your growth.",
+        "optimiza": "Optimize turnover, attract new bettors, and improve retention, all while maximizing the value of each bet. Additionally, manage operations across multiple channels efficiently and securely, tailored to each player.",
+        "entiendeyguia": "Understand, guide, and enhance",
+        "laexperiencia": "the betting experience",
+        "depositos": "Secure Deposits and Withdrawals in Fiat or Crypto.",
+        "tususuarios": "With ChatBet, your users can make deposits and withdrawals securely in local currencies or cryptocurrencies through any installed channel, like WhatsApp or Telegram. All transactions are processed securely without leaving the chat, ensuring a seamless and hassle-free experience.",
+        "casinos": "Casino: Smart plays",
+        "soporte": "Support: Instant responses.",
+        "sugerencias": "Game Suggestions: Data-driven recommendations.",
+        "soporterespuestas": "Support: Instant responses.",
+        "promociones": "Promotions",
+        "ofertas": "Personalized offers",
+        "noticias": "News: Key events in real-time",
+        "sincomplicaciones": "Betting Without Complications for your Users—All in a Chat",
+        "tususuariosapuestan": "With ChatBet, your users bet as easily as sending a message. Without navigating sites or lengthy registrations, everything happens in a single conversation.",
+        "tususuarioshacen": "Your users place their bets in seconds",
+        "enlugar": "Instead of searching, they simply type in the chat the bet they want to make.",
+        "ingresan": "They enter the amount to bet",
+        "soloindican": "Your users simply indicate how much they want to bet and are ready.",
+        "confirman": "They confirm and the bet is placed instantly 🤙",
+        "unmensajerapido": "A quick confirmation message, and the bet is active—without delays or complications.",
+        "esteproceso": "This smooth process keeps users engaged, offering a fast and frictionless experience in their favorite messaging platform.",
+        "proteccion": "Top-level protection",
+        "laplataforma": "The secure platform your business needs.",
+        "segura": "Security is essential in our platform. With AWS, PCI DSS, and ISO 27001, we guarantee protected operations and secure data, meeting the highest industry standards.",
+        "unanse": "Join the excitement!"
+    
 
 }
