--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -61,7 +61,7 @@
         "PaisT": "Country",
         "Pais": "Enter your city and/or country from where you are contacting us",
     
-        "Get": "Get a demo!",
+        "Get": "Get Demo",
     
         "headerone": "+Features",
         "headertwo": "Benefits",
